--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,27 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Rent Estimator App</title>
 </head>
 <body>
 
-<form action="/user/" style="border:1px solid #ccc">
+<form action="/user/" method="POST" style="border:1px solid #ccc">
     <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
 
         <label for="firstName"><b>First Name</b></label>
-        <input type="text" placeholder="First Name" name="firstName" required>
+        <input type="text" placeholder="First Name" name="firstName" required><br>
 
         <label for="lastName"><b>Last Name</b></label>
-        <input type="text" placeholder="Last Name" name="lastName" required>
+        <input type="text" placeholder="Last Name" name="lastName" required><br>
 
         <label for="emailAddress"><b>Email Address</b></label>
-        <input type="text" placeholder="Email Address" name="emailAddress" required>
+        <input type="text" placeholder="Email Address" name="emailAddress" required><br>
 
         <label for="phoneNumber"><b>Phone Number</b></label>
-        <input type="text" placeholder="Phone Number" name="phoneNumber" required>
+        <input type="text" placeholder="Phone Number" name="phoneNumber" required><br>
 
         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
