--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="script/script.js"></script>
     <title>Rent Estimator App</title>
 </head>
 <body>
 
-<form enctype="application/json" action="/user/" method="POST" style="border:1px solid #ccc">
+<form name="signupform" action="/user/" method="POST" style="border:1px solid #ccc">
     <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
