--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="scripts/script.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
     <title>Rent Estimator App</title>
 </head>
 <body>
