--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="docs/assets/js/vendor/jquery.min.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
     <title>Rent Estimator App</title>
 </head>
 <body>
@@ -31,7 +33,6 @@
             <button type="button" class="cancelbtn">Cancel</button>
             <button type="submit" class="signupbtn">Sign Up</button>
         </div>
-        <script type="text/javascript" src="scripts/script.js"></script>
     </div>
 </form>
 </body>
