--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="docs/assets/js/vendor/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
     <title>Rent Estimator App</title>
 </head>
 <body>
@@ -35,5 +34,7 @@
         </div>
     </div>
 </form>
+<script type="text/javascript" src="webjars/jquery/2.2.4/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/script.js"></script>
 </body>
 </html>
