--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/resources/css/styles.css">
     <title>Rent Estimator App</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
 <form name="signupform" action="/user/" method="POST" style="border:1px solid #ccc">
     <div class="container">
         <h1>Sign Up</h1>
-        <p>Please fill in this form to check your rent estimate</p>
+        <p>Please fill in this form to create an account.</p>
         <hr>
 
         <label for="firstName"><b>First Name</b></label>
@@ -30,11 +30,11 @@
 
         <div class="clearfix">
             <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="signupbtn">Next</button>
+            <button type="submit" class="signupbtn">Sign Up</button>
         </div>
     </div>
 </form>
 <script type="text/javascript" src="webjars/jquery/2.2.4/jquery.min.js"></script>
-<script type="text/javascript" src="scripts/script.js"></script>
+<script type="text/javascript" src="/resources/scripts/script.js"></script>
 </body>
 </html>
