Changing the form

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,38 +6,159 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Rent Estimator App</title>
 </head>
+
+<style>
+
+/* Hide all steps by default: */
+.tab {
+  display: none;
+}
+
+</style>
 <body>
 
-<form name="signupform" action="/user/" method="POST" style="border:1px solid #ccc">
-    <div class="container">
+<form ID="regForm" name="signupform" action="/user/" method="POST" style="border:1px solid #ccc">
+    <div class="tab">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
 
         <label for="firstName"><b>First Name</b></label>
-        <input type="text" placeholder="First Name" name="firstName" required><br>
+        <input oninput="this.className = ''" type="text" placeholder="First Name" name="firstName" required><br>
 
         <label for="lastName"><b>Last Name</b></label>
-        <input type="text" placeholder="Last Name" name="lastName" required><br>
+        <input oninput="this.className = ''" type="text" placeholder="Last Name" name="lastName" required><br>
 
         <label for="emailAddress"><b>Email Address</b></label>
-        <input type="text" placeholder="Email Address" name="emailAddress" required><br>
+        <input oninput="this.className = ''" type="text" placeholder="Email Address" name="emailAddress" required><br>
 
         <label for="phoneNumber"><b>Phone Number</b></label>
-        <input type="text" placeholder="Phone Number" name="phoneNumber" required><br>
-
-        <label for="address"><b>Address</b></label>
-        <input type="text" placeholder="Adress" name="address" required><br>
+        <input oninput="this.className = ''" type="text" placeholder="Phone Number" name="phoneNumber" required><br>
 
         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-        <div class="clearfix">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="signupbtn">Sign Up</button>
-        </div>
     </div>
+    <div class="tab">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
+
+        <label for="address"><b>Address</b></label>
+        <input oninput="this.className = ''" type="text" placeholder="Address" name="address" required><br>
+    </div>
+    <div class="tab">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
+
+        <label for="estimatedRent"><b>Estimated Rent Range: </b></label>
+        <label for="estimatedRentValue"><b></b></label><br><br><br>
+
+        <label for="expectedRent"><b>Expected Rent Range(in USD)</b></label><br>
+        <input oninput="this.className = ''" type="text" placeholder="Lower Bound" name="expectedRent" required>
+        <input oninput="this.className = ''" type="text" placeholder="Upper Bound" name="expectedRent" required><br>
+    </div>
+    <div class="tab">
+        <h1>Success!</h1>
+        <p>Account created! Please check your email</p>
+        <hr>
+    </div>
+    <div class="clearfix">
+        <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+    </div>
+    <div >
+        <span class="step"></span>
+        <span class="step"></span>
+        <span class="step"></span>
+        <span class="step"></span>
+    </div>
+    <!--<div class="clearfix">
+        <button type="button" class="cancelbtn">Cancel</button>
+        <button type="submit" class="signupbtn">Sign Up</button>
+    </div>-->
 </form>
 <script type="text/javascript" src="webjars/jquery/2.2.4/jquery.min.js"></script>
-<script type="text/javascript" src="scripts/script.js"></script>
+<script>
+var currentTab = 0; // Current tab is set to be the first tab (0)
+showTab(currentTab); // Display the crurrent tab
+
+function showTab(n) {
+  // This function will display the specified tab of the form...
+  var x = document.getElementsByClassName("tab");
+  x[n].style.display = "block";
+  //... and fix the Previous/Next buttons:
+  if ( n == 0 ){
+    document.getElementById("nextBtn").onclick = function() {
+        var obj = new Object();
+        obj.firstName = $('input[name="firstName"]').val();
+        obj.lastName = $('input[name="lastName"]').val();
+        obj.emailAddress = $('input[name="emailAddress"]').val();
+        obj.phoneNumber = $('input[name="phoneNumber"]').val();
+        $.ajax({
+                type: 'POST',
+                url: '/user/',
+                dataType: 'json',
+                data: JSON.stringify(obj),
+                contentType : 'application/json',
+                success: function(data, status, response) {
+                    console.log(response);
+                },
+                error: function(){
+                    console.log("Error Occured");
+                }
+            });
+        };
+  }
+  if (n == (x.length - 1)) {
+    document.getElementById("nextBtn").style.display = "none";
+  }
+  else if (n == (x.length - 2)) {
+    document.getElementById("nextBtn").innerHTML = "Submit";
+  } else {
+    document.getElementById("nextBtn").innerHTML = "Next";
+  }
+}
+
+function nextPrev(n) {
+  // This function will figure out which tab to display
+  var x = document.getElementsByClassName("tab");
+  // Exit the function if any field in the current tab is invalid:
+  if (n == 1 && !validateForm()) return false;
+  // Hide the current tab:
+  x[currentTab].style.display = "none";
+  // Increase or decrease the current tab by 1:
+  currentTab = currentTab + n;
+  // if you have reached the end of the form...
+  if (currentTab >= x.length) {
+    // ... the form gets submitted:
+    document.getElementById("regForm").submit();
+    return false;
+  }
+  // Otherwise, display the correct tab:
+  showTab(currentTab);
+}
+
+function validateForm() {
+  // This function deals with validation of the form fields
+  var x, y, i, valid = true;
+  x = document.getElementsByClassName("tab");
+  y = x[currentTab].getElementsByTagName("input");
+  // A loop that checks every input field in the current tab:
+  for (i = 0; i < y.length; i++) {
+    // If a field is empty...
+    if (y[i].value == "") {
+      // add an "invalid" class to the field:
+      y[i].className += " invalid";
+      // and set the current valid status to false
+      valid = false;
+    }
+  }
+  // If the valid status is true, mark the step as finished and valid:
+  if (valid) {
+    document.getElementsByClassName("step")[currentTab].className += " finish";
+  }
+  return valid; // return the valid status
+}
+
+</script>
 </body>
 </html>
